<resources>
    <string name="app_name">Healthy Life Style</string>

    <string name="protine">Protein</string>
    <string name="glucide">Carbohydrates</string>
    <string name="lipide">Lipid</string>

    <string name="home1">Nutrition Progression</string>
    <string name="home2">Exercice Progression</string>

    <string name="home_init0">Select your mood to built a mood traker</string>
    <string name="home_init1">Select your mood to built a mood traker</string>
    <string name="home_init2">Select your mood to built a mood traker</string>

    <string name="home_init_titre1">Balance your Nutrition</string>
    <string name="home_init_titre2">Balance your Activities</string>


    <string name="home_nutrition_txt1">Your Energy Need</string>
    <string name="home_nutrition_txt2">Go to Nutrition</string>
    <string name="home_nutrition_txt3"> To track your calories progresion</string>

    <string name="home_weight_traker_txt1">Do you have an ideal weight?</string>
    <string name="home_weight_traker_txt2">All you have to do is to update your weight every week, to get your weight progression</string>

    <string name="home_mood_traker_txt1">Do want to built a mood traker?</string>
    <string name="home_mood_traker_txt2">Select your mood to built a mood traker</string>

    <string name="home_pomodoro_txt1">Staying focused at work isn\'t easy!</string>
    <string name="home_pomodoro_txt2">Improve your productivity by using the Pomodoro Technique</string>
    <string name="home_pomodoro_txt3">Manage distractions and control your time</string>
    <string name="home_pomodoro_txt4">Manage distractions and control your time</string>

    <string name="dialogue_pomodoro_txt0">The Pomodoro Technique is a time management system that encourages people to work with the time they have rather than against it.</string>
    <string name="dialogue_pomodoro_txt1">Choose a task you want to work on</string>
    <string name="dialogue_pomodoro_txt2">Click ok,The timer is set to 25 minutes, the standard pomodoro duration.</string>
    <string name="dialogue_pomodoro_txt3">Work on the task until the timer rings, then check off your task in your to-do list.</string>
    <string name="dialogue_pomodoro_txt4">Take a short break of 5 minutes to do something not related to work like stretching, doodling, or making a call.</string>
    <string name="dialogue_pomodoro_txt5">After every 4 pomodoros, take a longer break of 20-30 minutes. This will help you clear your head, recollect your thoughts and rest before the next batch of Pomodoro-style work.</string>



    <string name="username">username</string>
    <string name="password">password</string>

    <string name="welcome">welcome</string>
    <string name="homelayout2_1">Eat! Eat! Eat!</string>
    <string name="homelayout3_1">Your Activities</string>
    <string name="homelayout4_1">Organize your time</string>
    <string name="home">Welcome </string>
    <string name="profile">Your profile </string>

    <string name="signupintro">Create your account</string>
    <string name="signup">Sign up</string>
    <string name="startsignup">Sign up</string>

    <string name="taille">hight</string>
    <string name="poid">weight</string>
    <string name="date_naissence">Birthday</string>
    <string name="sexe">Gender</string>
    <string name="femme">Female</string>
    <string name="homme">Male</string>
    <string name="nom">First name </string>
    <string name="prenom">Last name</string>

    <string name="next">next</string>
    <string name="back">back</string>

    <string name="profilProgression">Profile Progression</string>

    <string name="objectif">Goals</string>
    <string name="objectif1">Be more healthy</string>
    <string name="objectif2">Be more sporty</string>
    <string name="objectif3">Manage the stress</string>
    <string name="objectif4">Mental Health</string>


    <string name="hint_user">write your user name</string>
    <string name="hint_password">write your user password</string>

    <string name="title_activity_main_my_menu">MainMyMenu</string>
    <string name="title_home">Home</string>
    <string name="title_actph">Physical Activity</string>
    <string name="title_actmrl">Cognitive Activity</string>
    <string name="title_nuttrision">Nutrition </string>
    <string name="title_profile">Profil</string>

    <string-array name="maladie">
        <item>None</item>
        <item>Asthma</item>
        <item>Hypertension</item>
        <item>Diabetes</item>
        <item>Cardiac disease</item>
        <item>Other</item>
    </string-array>


    <string-array name="categorie_aliment">
        <item>Leguems</item>
        <item>Fruits Frais</item>
        <item>Fruits Sec</item>
        <item>Viandes</item>
        <item>Burgers</item>
        <item>Autre</item>
    </string-array>


    <string-array name="autre">
        <item>Oeufs</item>
        <item>Fromage a pate molle</item>
        <item>Fromage a pate dure</item>
        <item>Pain</item>
        <item>Yaourt</item>
        <item>Céréales</item>
        <item>Beurre</item>
        <item>Huiles, Sucre</item>
    </string-array>

    <string-array name="aigu_">
        <item>troubles digestifs</item>
        <item>Manque de concentration</item>
        <item>Agitation</item>
        <item>Tristesse</item>
    </string-array>

    <string-array name="aigu">
        <item>digestive disorders</item>
        <item>Lack of concentration</item>
        <item>Agitation</item>
        <item>Sadness</item>
    </string-array>

    <string-array name="chronic_">

        <item>Dépression et anxiété</item>
        <item>Douleur de toute nature</item>
        <item>Problèmes de sommeil</item>
        <item>Maladies auto immunes</item>
        <item>Problèmes digestifs</item>
        <item>Affections cutanées, comme leczéma</item>
        <item>Cardiopathie</item>
        <item>Problèmes de poids</item>
        <item>Problèmes de reproduction</item>
        <item>Problèmes de pensée et de mémoire</item>

    </string-array>

    <string-array name="chronic">

        <item>Depression and anxiety</item>
        <item>Pain of any kind</item>
        <item>Sleep problems</item>
        <item>Autoimmune diseases</item>
        <item>Digestive issues</item>
        <item>Skin conditions, such as eczema</item>
        <item>Heart disease</item>
        <item>Weight problems</item>
        <item>Reproductive issues</item>
        <item>Thinking and memory problems</item>

    </string-array>

    <string-array name="burnOut_">


        <item>Se sentir fatigué et épuisé la plupart du temps</item>
        <item>Maux de tête fréquents ou douleurs musculaires</item>
        <item>Immunité réduite, maladies fréquentes</item>


        <item>Changement d appétit ou de sommeil</item>
        <item>Sentiment d échec et de doute de soi</item>
        <item>Perte de motivation</item>
        <item>Se sentir impuissant, pris au piège et vaincu</item>
        <item>Perspectives de plus en plus cyniques et négatives</item>
        <item>Détachement, se sentir seul au monde</item>
        <item>satisfaction et du sentiment d accomplissement</item>
        <item>Se retirer de ses responsabilités</item>
        <item>Consommer de la nourriture, des drogues ou de l alcool pour faire face</item>
        <item>S isoler des autres</item>
        <item>Sortir vos frustrations des autres</item>
        <item>Tergiverser, prendre plus de temps pour faire avancer les choses</item>
        <item>Sauter le tra</item>>

    </string-array>

    <string-array name="burnOut">
        <item>Feeling tired and exhausted most of the time</item>
        <item>Frequent headaches or muscle pain</item>
        <item>Reduced immunity, frequent illnesses</item>
        <item>Change in appetite or sleep</item>
        <item>Feeling of failure and self-doubt</item>
        <item>Loss of motivation</item>
        <item>Feeling helpless, trapped and defeated</item>
        <item>Increasingly cynical and negative outlook</item>
        <item>Detachment, feeling alone in the world</item>
        <item>satisfaction and sense of accomplishment</item>
        <item>Withdraw from responsibilities</item>
        <item>Consume food, drugs, or alcohol to cope</item>
        <item>Isolate yourself from others</item>
        <item>Take out your frustrations from others</item>
        <item>Procrastinate, take more time to get things done</item>
        <item>Skip the tra</item>>
    </string-array>


</resources>
