<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.healtyapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/activity_home" />

    <fragment
        android:id="@+id/navigation_activityphysic"
        android:name="com.example.healtyapp.ui.activityphysic.ActivityphysicFragment"
        android:label="@string/title_actph"
        tools:layout="@layout/activity_actphysic" />

    <fragment
        android:id="@+id/navigation_activitymorale"
        android:name="com.example.healtyapp.ui.activitymorale.ActivitymoraleFragment"
        android:label="@string/title_actmrl"
        tools:layout="@layout/activity_actmorale" />

    <fragment
        android:id="@+id/navigation_nuttrision"
        android:name="com.example.healtyapp.ui.nutrition.NutritionFragment"
        android:label="@string/title_nuttrision"
        tools:layout="@layout/activity_nuttrision" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.healtyapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/activity_profile" />
</navigation>
